set current time

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,7 +5,7 @@
     "manifest_version": 3,
     "action": {
         "default_title": "Video downloader",
-        "default_popup": "/",
+        "default_popup": "/index.html",
         "default_icon": {
             "16": "download.png",
             "128": "download.png"
